fix medovev overflow and monospace; add replace option in open_internal_link

--- a/medovev/style.css
+++ b/medovev/style.css
@@ -76,6 +76,10 @@
     white-space: pre-wrap;
 }
 
+#counts > span {
+    font-family: var(--mono_font);
+}
+
 #palindrome {
     background-color: var(--fg_verydim);
 }
